fix animation white space issue and add welcome text

--- a/src/Components/Animation/Animation.module.css
+++ b/src/Components/Animation/Animation.module.css
@@ -4,14 +4,21 @@
     margin: 0;
     padding: 0;
     left:0;
-    /* height: 100vh; */
-    width: 100%;
-    /* height: 100vh;
-    width: 100vw; */
+    width: 150%;
     z-index: -1;
 }
 
-@media only screen and (max-width: 767px){
+
+@media only screen and (max-width: 1283px){
+    .animation {
+        transform: rotate(90deg) translateY(-100%);
+        transform-origin: top left;
+        /* width: max-content; */
+        width: 200%;
+    }
+}
+
+@media only screen and (max-width: 678px){
     .animation {
         transform: rotate(90deg) translateY(-100%);
         transform-origin: top left;
